# 100_days_ml

./: .gitignore  README.md  pyproject.toml
01_Debuter_En_Python/: 00_numpy_for_ml.ipynb
01_Debuter_En_Python/01_Pandas_For_ML/: 01_Pandas_For_ML_J3.ipynb
