[project]
name = "100_days_ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name="ao627" }
]
requires-python = ">=3.11"

dependencies = [
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
